# test-em-proto

./: .gitignore  CMakeLists.txt  README.md  generate.sh  pyproject.toml
desktop/: deser.py  main.cpp
proto/: uart_msg.proto
